<resources>
    <string name="app_name">UCR RA</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Ajustes</string>
    <string name="title_activity_maps">Map</string>
    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>

    <string name="hello_world">Hello world!</string>
    <string name="speech_prompt">Hablame&#8230;</string>
    <string name="speech_not_supported">Lo sentimos. Este dispositivo no permite dictar textos</string>
    <string name="tap_on_mic">Tap on mic to speak</string>

    <string name="wikitude_key">d2Sz+fEjZbhOxJcsDhFU46jIyKC6dGcsC6tnHu9u/6vP5uqso/pG8xlJgppdpfvD2LMuYikdmvgc2NfyTbCMvZbdbRRkTtuyzQ+yRz+raUiIuKrUdZAabnKjGzGEivgD7dL4SE52OrPohL+rumCkeQDDNkSD/B+RcOA9YnwnfWRTYWx0ZWRfX5p4KaYZybeQzJGkokdAmFMqh2yruU8T4a6ax4U7wY4axBih8yukHMhDi4/GpI4lT8iHDBP0gFHhNLvePLDz5I1L+Fcj39BaIOLWBSLi/xOSEwbBCAd/KaNBT6Oc/uJUESbw58KZLA5O9diC9lSgaw+clhvX41nQUN42zAv9X02/71x0UT8ztBpcp/qYkR8XMztlm7akm09QcfojVwX1N+CbcHk5xl8xvNms7GHWrE0gSpBAqCxa9p83SUdvNPJ+tgJwCgasJs/XEtvn+pK6P98xfTuqtKCqyz4CJNr2vNb1qa+rpb/Po2ibT3dp5Dm1ontZsyNVCPgiT69OagIjQCa5MM5A5qFXJoRq+KjNKeH9wduPfaaJl7JH7LbU9OtGIStDf70QZoL8dMwjN1QyQMe4A03becqe6JWRkU03NHMXA7L0OPu6AD4uFRn5af+AvNVVOZcF2q4UG3prvTSJzt4pHGrr3Uiu6Tb6xkdCS62H6awVJarZE9g=</string>

    <!-- Vuforia -->
    <string name="app_description">VideoPlayback Sample Application</string>

    <string name="button_start">Start</string>

    <string name="INIT_ERROR">Error</string>
    <string name="INIT_ERROR_DEVICE_NOT_SUPPORTED">Failed to initialize Vuforia. This device is not supported.</string>
    <string name="INIT_ERROR_NO_CAMERA_ACCESS">Failed to initialize Vuforia. Camera not accessible</string>
    <string name="INIT_LICENSE_ERROR_MISMATCH_KEY">Vuforia App key is not valid for this product. Please get a valid key, by logging into your account at developer.vuforia.com and choosing the right product type during project creation.</string>
    <string name="INIT_LICENSE_ERROR_MISSING_KEY">Vuforia App key is missing. Please get a valid key, by logging into your account at developer.vuforia.com and creating a new project.</string>
    <string name="INIT_LICENSE_ERROR_INVALID_KEY">Invalid Key used. Please make sure you are using a valid Vuforia App Key.</string>
    <string name="INIT_LICENSE_ERROR_NO_NETWORK_TRANSIENT">Unable to contact server. Please try again later.</string>
    <string name="INIT_LICENSE_ERROR_NO_NETWORK_PERMANENT">No network available. Please make sure you are connected to the Internet.</string>
    <string name="INIT_LICENSE_ERROR_CANCELED_KEY">This app license key has been canceled and may no longer be used. Please get a new license key.</string>
    <string name="INIT_LICENSE_ERROR_PRODUCT_TYPE_MISMATCH">Vuforia App key is not valid for this product. Please get a valid key, by logging into your account at developer.vuforia.com and choosing the right product type during project creation.</string>
    <string name="INIT_LICENSE_ERROR_UNKNOWN_ERROR">Failed to initialize Vuforia.</string>
    <string name="menu_back">About</string>
    <string name="menu_extended_tracking">Extended Tracking</string>
    <string name="menu_flash">Flash</string>
    <string name="menu_flash_error_on">Unable to turn on flash</string>
    <string name="menu_flash_error_off">Unable to turn off flash</string>
    <string name="menu_contAutofocus">Autofocus</string>
    <string name="menu_contAutofocus_error_on">Unable to activate Continuous Auto-Focus</string>
    <string name="menu_contAutofocus_error_off">Unable to deactivate Continuous Auto-Focus</string>
    <string name="menu_playFullscreenVideo">Play Fullscreen</string>
    <string name="menu_camera">CAMERA</string>
    <string name="menu_camera_front">Front</string>
    <string name="menu_camera_back">Rear</string>
    <string name="title_activity_home">HomeActivity</string>


    <!--Menu-->
    <string name="menu_home">Inicio</string>
    <string name="menu_maps">Ver Mapa</string>
    <string name="menu_ra">Reconocimiento</string>
    <string name="menu_share">Compartir</string>
    <string name="menu_accessibility">Accesibilidad</string>
    <string name="menu_settings">Ajustes</string>

    <string name="title_activity_settings">Settings</string>
    <string name="menu_commands">Comandos de voz</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!--Instructions to guide the user when doing the path-->

    <string name="turn_left">Gire a la izquierda</string>
    <string name="turn_right">Gire a la derecha</string>
    <string name="at_the_next">A la siguiente</string>
    <string name="entrance">Entrada</string>
    <string name="sidewalk">Acera</string>
    <string name="cross">Cruce</string>
    <string name="straight_ahead">Hacia adelante</string>
    <string name="turn_around">De la vuelta</string>


</resources>
