<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_photo_camera_white_24dp"
            android:title="@string/menu_ra" />

        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/ic_location_on_black_24dp"
            android:title="@string/menu_maps" />

        <item
            android:id="@+id/nav_takeme"
            android:icon="@drawable/ic_drive_eta_black_24dp"
            android:title="Llévame" />

    </group>

    <item android:title="@string/menu_accessibility">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_accessibility"
                android:icon="@drawable/ic_live_help_black_24dp"
                android:title="Modo Accesibilidad" />

            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/menu_settings" />
        </menu>
    </item>

</menu>
